[gd_scene load_steps=10 format=2]

[ext_resource path="res://Discard.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/fonts/m3x6_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.298039, 0.6, 0.662745, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.439216, 0.784314, 0.831373, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 3
corner_radius_bottom_right = 25
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.439216, 0.784314, 0.831373, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 8
corner_radius_bottom_right = 25
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.294118, 0.988235, 0.996078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.298039, 0.6, 0.662745, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.262745, 0.478431, 0.521569, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
deck = NodePath("GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer/DeckLayout/DeckPlaceholder/Deck")
hand = NodePath("GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Hand")
hand_stack = NodePath("GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/HandStack")
discard = NodePath("GameBoard/MarginContainer/BoardLayout/CardBoardLayout/Discard/MarginContainer/DiscardLayout/DiscardPlaceholder/Discard")

[node name="GameBoard" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GameBoard"]
margin_right = 640.0
margin_bottom = 360.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="BoardLayout" type="VBoxContainer" parent="GameBoard/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 340.0
custom_constants/separation = 20

[node name="CardBoardLayout" type="HBoxContainer" parent="GameBoard/MarginContainer/BoardLayout"]
margin_right = 600.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckPanel" type="PanelContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout"]
margin_right = 80.0
margin_bottom = 250.0
size_flags_horizontal = 4
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel"]
margin_right = 80.0
margin_bottom = 250.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 13

[node name="DeckLayout" type="VBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 237.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer/DeckLayout"]
margin_right = 70.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.803922, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "DECK"
align = 1
valign = 1

[node name="DeckPlaceholder" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer/DeckLayout" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 136.0
margin_right = 70.0
margin_bottom = 232.0
size_flags_vertical = 10

[node name="Deck" type="VBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer/DeckLayout/DeckPlaceholder"]
margin_right = 70.0
margin_bottom = 96.0
custom_constants/separation = -97

[node name="HandPanel" type="PanelContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout"]
margin_left = 100.0
margin_right = 500.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel"]
margin_right = 400.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 395.0
margin_bottom = 245.0

[node name="TitleLabel" type="Label" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.803922, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HAND"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer"]
margin_left = 195.0
margin_top = 133.0
margin_right = 195.0
margin_bottom = 133.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer/MarginContainer"]
custom_constants/separation = -59

[node name="HandStack" type="HBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_constants/separation = -69

[node name="Hand" type="HBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = -59.0
margin_right = -59.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = -50

[node name="Discard" type="PanelContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout"]
margin_left = 520.0
margin_right = 600.0
margin_bottom = 250.0
size_flags_horizontal = 4
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/Discard"]
margin_right = 80.0
margin_bottom = 250.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 13
__meta__ = {
"_editor_description_": ""
}

[node name="DiscardLayout" type="VBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/Discard/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 237.0
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="TitleLabel" type="Label" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/Discard/MarginContainer/DiscardLayout"]
margin_right = 70.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.803922, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "DISCARD"
align = 1
valign = 1

[node name="DiscardPlaceholder" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/Discard/MarginContainer/DiscardLayout" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 136.0
margin_right = 70.0
margin_bottom = 232.0
size_flags_vertical = 10

[node name="Discard" type="VBoxContainer" parent="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/Discard/MarginContainer/DiscardLayout/DiscardPlaceholder"]
margin_right = 70.0
margin_bottom = 96.0
custom_constants/separation = -97

[node name="PanelContainer" type="PanelContainer" parent="GameBoard/MarginContainer/BoardLayout"]
margin_top = 270.0
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -14.0
margin_right = 38.0
margin_bottom = 14.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Menu"]
margin_right = 76.0
margin_bottom = 22.0
custom_colors/font_color_disabled = Color( 0.443137, 0.2, 0.2, 1 )
custom_colors/font_color_focus = Color( 0.803922, 0, 0, 1 )
custom_colors/font_color = Color( 0.803922, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.984314, 0.176471, 0.176471, 1 )
custom_colors/font_color_pressed = Color( 1, 0.0862745, 0, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="World" type="Node2D" parent="."]

[connection signal="mouse_entered" from="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer/DeckLayout/DeckPlaceholder" to="." method="_on_DeckPlaceholder_mouse_entered"]
[connection signal="mouse_exited" from="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/DeckPanel/MarginContainer/DeckLayout/DeckPlaceholder" to="." method="_on_DeckPlaceholder_mouse_exited"]
[connection signal="resized" from="GameBoard/MarginContainer/BoardLayout/CardBoardLayout/HandPanel/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Hand" to="." method="_on_Hand_resized"]
[connection signal="pressed" from="Menu/NewGame" to="." method="_on_NewGame_pressed"]
